# keepitprivate

./: .gitignore  .isort.cfg  README.md  manage.py  pyproject.toml
keepitprivate/: constants.py  settings.py  urls.py  wsgi.py
keepitprivate/api_service/auth/: serializers.py  urls.py  views.py
keepitprivate/api_service/file_system/: serializers.py  urls.py  views.py
keepitprivate/core/: models.py
keepitprivate/core/api_service/: permissions.py
keepitprivate/core/migrations/: 0001_initial.py
keepitprivate/file_system/: models.py
keepitprivate/file_system/migrations/: 0001_initial.py
keepitprivate/settings/: settings.py  settings_dev.py
